# dimensium-base

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  precompile.hpp
src/base/: base.hpp  definitions.hpp  exceptions.cpp  exceptions.hpp  freq_used_exceptions.hpp
src/state/format/: block.hpp  item.hpp
src/utility/allocation/: allocator.hpp
src/utility/log/: log_message.hpp  log_queue.cpp  log_queue.hpp  log_stream.cpp  log_stream.hpp  logger.cpp  logger.hpp
src/utility/uuid/: uuid.cpp  uuid.hpp
src/world/: block.hpp  dimension.hpp  item.hpp  namespace_id.hpp  world.hpp
